# fastapi-eccomerce

./: .dockerignore  .env.docker  .env.example  .gitignore  Dockerfile  Makefile  README.md  SETUP.md  alembic.ini  create_tables.py  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  make_superuser.py  pyproject.toml  pytest.ini  render.yaml  requirements-postgres-test.txt  requirements-test.txt  requirements.txt  run_tests.sh  test.db
alembic/: env.py
alembic/versions/: 7b028cb45315_initial_migration.py
app/: config.py  database.py  main.py
app/core/: security.py
app/models/: __init__.py  cart.py  category.py  order.py  product.py  user.py
app/repositories/: __init__.py  base.py  cart_repository.py  category_repository.py  order_repository.py  product_repository.py  user_repository.py
app/schemas/: cart.py  category.py  order.py  product.py  token.py  user.py
app/services/: __init__.py  base.py  cart_service.py  category_service.py  order_service.py  product_service.py  user_service.py
app/utils/: db_utils.py  make_superuser.py  seed_database.py
docs/: README.md  RENDER_DEPLOY.md  RUN_WITH_VALIDATION.md  TESTING.md  TESTING_POSTGRESQL.md
scripts/: health-check.py  init-project.bat  init-project.ps1  init-project.py  init-project.sh  init.sql  pre-commit-hook.sh  render-deploy.sh  run-with-tests.sh  test-redis.py  test-with-postgres.sh
tests/: README.md  __init__.py  conftest.py  factories.py  test_setup.py
tests/test_api/: test_auth.py  test_health.py  test_products.py  test_users.py
tests/test_models/: __init__.py  (+3 more)
(+17 files in other folders)
